--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/auth-next": "^5.0.0-1667386184.dfbbb54",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/fontawesome": "^1.1.2",
+    "@nuxtjs/proxy": "^2.1.0",
     "core-js": "^3.19.3",
+    "dotenv": "^16.0.3",
+    "keycloak-js": "^20.0.5",
     "nuxt": "^2.15.8",
+    "select-philippines-address": "^1.0.6",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
@@ -19,6 +26,11 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.1",
-    "postcss": "^8.4.4"
+    "@tailwindcss/forms": "^0.5.0",
+    "autoprefixer": "^10.4.8",
+    "node-sass": "^7.0.1",
+    "postcss": "^8.4.16",
+    "sass": "^1.54.5",
+    "sass-loader": "^10.3.1"
   }
 }
