--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^2.0.10",
     "@nuxtjs/auth-next": "^5.0.0-1667386184.dfbbb54",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/proxy": "^2.1.0",
+    "@vuesimple/vs-pagination": "^1.4.13",
     "core-js": "^3.19.3",
     "dotenv": "^16.0.3",
     "keycloak-js": "^20.0.5",
     "nuxt": "^2.15.8",
     "select-philippines-address": "^1.0.6",
     "vue": "^2.6.14",
+    "vue-select": "^3.20.2",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
